@@ -1,0 +1,3 @@
+Site URL: https://www.nonktube.com/
+Contact: https://www.nonktube.com/feedback, jokermedia.biz@gmail.com
+DMCA: https://www.nonktube.com/static/dmca
